[gd_scene load_steps=11 format=2]

[ext_resource path="res://ParoParticles.gd" type="Script" id=1]
[ext_resource path="res://Sprites/paro_parts.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 64, 32, 32, 32 )

[node name="ParoParticles" type="Node2D"]
script = ExtResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 2
lifetime = 3.0
one_shot = true
explosiveness = 0.8
texture = SubResource( 1 )
emission_shape = 2
emission_rect_extents = Vector2( 32, 32 )
spread = 180.0
initial_velocity = 100.0
angular_velocity = 30.0

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
emitting = false
amount = 2
lifetime = 3.0
one_shot = true
explosiveness = 0.8
texture = SubResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 32, 32 )
spread = 180.0
initial_velocity = 100.0
angular_velocity = 30.0

[node name="CPUParticles2D3" type="CPUParticles2D" parent="."]
emitting = false
amount = 1
lifetime = 3.0
one_shot = true
explosiveness = 0.8
texture = SubResource( 3 )
emission_shape = 2
emission_rect_extents = Vector2( 32, 32 )
spread = 180.0
initial_velocity = 100.0
angular_velocity = 30.0

[node name="CPUParticles2D4" type="CPUParticles2D" parent="."]
emitting = false
amount = 1
lifetime = 3.0
one_shot = true
explosiveness = 0.8
texture = SubResource( 4 )
emission_shape = 2
emission_rect_extents = Vector2( 32, 32 )
spread = 180.0
initial_velocity = 100.0
angular_velocity = 30.0

[node name="CPUParticles2D5" type="CPUParticles2D" parent="."]
emitting = false
amount = 2
lifetime = 3.0
one_shot = true
explosiveness = 0.8
texture = SubResource( 5 )
emission_shape = 2
emission_rect_extents = Vector2( 32, 32 )
spread = 180.0
initial_velocity = 100.0
angular_velocity = 30.0

[node name="CPUParticles2D6" type="CPUParticles2D" parent="."]
emitting = false
amount = 2
lifetime = 3.0
one_shot = true
explosiveness = 0.8
texture = SubResource( 6 )
emission_shape = 2
emission_rect_extents = Vector2( 32, 32 )
spread = 180.0
initial_velocity = 100.0
angular_velocity = 30.0

[node name="CPUParticles2D7" type="CPUParticles2D" parent="."]
emitting = false
amount = 2
lifetime = 3.0
one_shot = true
explosiveness = 0.8
texture = SubResource( 7 )
emission_shape = 2
emission_rect_extents = Vector2( 32, 32 )
spread = 180.0
initial_velocity = 100.0
angular_velocity = 30.0

[node name="CPUParticles2D8" type="CPUParticles2D" parent="."]
emitting = false
amount = 10
lifetime = 3.0
one_shot = true
explosiveness = 0.8
texture = SubResource( 8 )
emission_shape = 2
emission_rect_extents = Vector2( 32, 32 )
spread = 180.0
initial_velocity = 200.0
angular_velocity = 50.0
angular_velocity_random = 1.0

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
